--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 ################################################################################
 
 /EchecGame/obj
+
+\.vs/EchecDotNet/v15/
+
+EchecLibrary/obj/
